--- a/CS504BlazorApp/IndependentProject/Pages/Index.razor
+++ b/CS504BlazorApp/IndependentProject/Pages/Index.razor
@@ -4,6 +4,6 @@
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app developed as part of Independent project-CS504
+Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
